--- a/word-relay.html
+++ b/word-relay.html
@@ -12,7 +12,10 @@
 <input type="text">
 <button>입력</button>
 <script>
-12312
+  const number = parseInt(prompt('몇 명이 참가하나요?'),10);
+  // console.log('number' , number)
+  alert(number);
+  const yesOrNo = confirm('맞나요?')
 </script>
 </body>
 
