--- a/word-relay.html
+++ b/word-relay.html
@@ -16,7 +16,16 @@
   // console.log('number' , number)
   alert(number);
   const yesOrNo = confirm('맞나요?')
+
+document.querySelector('input').addEventListener('input',(event) => {
+  console.log('글자 입력' , event.target.value);
+});
+
+const onClick = () => {
+  console.log('버튼 클릭');
+};
+document.querySelector('button').addEventListener('click', onClick);
 </script>
 </body>
-123123
+
 </html>
