--- a/word-relay.html
+++ b/word-relay.html
@@ -12,19 +12,48 @@
 <input type="text">
 <button>입력</button>
 <script>
-  const number = parseInt(prompt('몇 명이 참가하나요?'),10);
-  // console.log('number' , number)
-  alert(number);
-  const yesOrNo = confirm('맞나요?')
+const number = parseInt(prompt('몇 명이 참가하나요?'),10);
+const $button = document.querySelector('button');
+const $input = document.querySelector('input');
+const $word = document.querySelector('#word');
+let word; // 제시어
+let newWord; // 새로 입력한 단어
 
-document.querySelector('input').addEventListener('input',(event) => {
-  console.log('글자 입력' , event.target.value);
-});
+const onClickButton = () => {
+  if (!word) { // 제시어가 비어 있는가? ! <- 없다
+    //비어 있다.
+    word = newWord; // 입력한 단어가 제시어가 된다.
+    $word.textContent = word;   // 왠만하면 textcontent 사용
+    $input.value = ' '; // value 사용하는 것들 중 input 사용
+    const order = Number($order.textContent) /* 순서 확인 ,   textcontent는 문자열을 받으므로 pareint 또는 Nuber로 숫자로 변경하여 
+                                  const order로 저장 */
+    if (order + 1 > number) {
+      $order.textContent = 1;
+    } else {  
+      order.textContent = order + 1;
+    }
+  } else {
+    // 비어 있지 않다.
+    if (word[word.length - 1] === newWord[0]){ //마지막 자리와 첫번째 자리의 글짜 끝말잇기가 올바른가?
+      word = newWord; // 입력한 단어가 제시어가 된다.
+      $word.textContent = word;   // 왠만하면 textcontent 사용
+      $input.value = ' '; // value 사용하는 것들 중 input 사용
+      const order = Number($order.textContent) /* 순서 확인 ,   textcontent는 문자열을 받으므로 pareint 또는 Nuber로 숫자로 변경하여 
+                                    const order로 저장 */
+      if (order + 1 > number) {
+        $order.textContent = 1;
+      } else {  
+        order.textContent = order + 1;
+      }
+    } else {
 
-const onClick = () => {
-  console.log('버튼 클릭');
-};
-document.querySelector('button').addEventListener('click', onClick);
+    }
+  }
+}
+
+$button.addEventListener('click', onClickButton);
+$input.addEventListener('input', onIput);
+
 </script>
 </body>
 
